add template code
