# server/src/domain/readmodel/GetAllCategorysReadModel.js
@@ -1,9 +1,0 @@
-import db from '../../infrastructure/db/index.js';
-
-class GetAllCategorysReadModel {
-  static async query() {
-    return await db.findAll('Category');
-  }
-}
-
-export default GetAllCategorysReadModel;
