# server/src/domain/readmodel/GetCategoryByIdReadModel.js
@@ -1,9 +1,0 @@
-import db from '../../infrastructure/db/index.js';
-
-class GetCategoryByIdReadModel {
-  static async query(id) {
-    return await db.findById('Category', id);
-  }
-}
-
-export default GetCategoryByIdReadModel;
